--- a/generic.html
+++ b/generic.html
@@ -32,10 +32,18 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">A little about me :D</h1>
+							<span class="image fit"><img src="MayMoe1.jpg" alt="" /></span>
+							<p>
+								Hello! May here again! Thank you for much for taking your time to know more about me. I am currently going to school at University of California, Irvine (UCI) as a Junior Computer Science student who is working towards a Bachelor Degree.
+
+Where was I before all this? Well, I am originally from Myanmar (Burma) and my journey started when I moved to the States for College in 2021 where I started off my two year at Pasadena City College. From there, I transferred to UCI majoring in Computer Science Major.
+
+I am very passionate about my major and I hope to join the industry after I graduate as a Software Engineer. Recently, I have been exploring the video game development part of Computer Science which lead me to join the Video Game Development Club at UCI. This allowed me to work in a team of not only programmers but also other roles like game designers, audio engineers, and etc that made it possible to make original video games.
+
+In my free time, (as most likely expected) I like playing Video Games AND ALSO exploring new boba places around the area.
+
+This is where I am going to stop about myself but hey, if you want to know more, feel free to reach out to me!</p>
 						</div>
 					</section>
 
