--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 						<div class="inner">
 							<h1>May Moe</h1>
 							<p>I am a Junior Computer Science student at UCI. Thanks for visiting my portfolio! I am so excited to show you my journey 
-								and tell you more about myself! <a href="http://html5up.net/license">Creative Commons</a>.</p>
+								and tell you more about myself! 
+								<!-- <a href="http://html5up.net/license">Creative Commons</a>.</p> -->
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -49,7 +50,7 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h2>ME!!</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -57,7 +58,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+						<!-- <section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -68,8 +69,8 @@
 									</ul>
 								</div>
 							</div>
-						</section>
-						<section>
+						</section> -->
+						<!-- <section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -80,10 +81,10 @@
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section> -->
 					</section>
 
-				<!-- Two -->
+				<!-- Two
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -124,7 +125,7 @@
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
@@ -155,27 +156,27 @@
 								</section>
 								<section>
 									<ul class="contact">
-										<li>
+										<!-- <li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">maymmoe33@gmail.com</a>
 										</li>
-										<li>
+										<!-- <li>
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
