--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<h2>My Works!</h2>
 									<p>Some of my fav projects </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Over here!</a></li>
+										<li><a href="works.html" class="button">Over here!</a></li>
 									</ul>
 								</div>
 							</div>
